testdata/baselines/reference/submodule/conformance/jsdocReadonly.errors.txt
jsdocReadonly.js(18,14): error TS2339: Property 'ka' does not exist on type 'LOL'.


==== jsdocReadonly.js (1 errors) ====
    class LOL {
        /**
         * @readonly
         * @private
         * @type {number}
         * Order rules do not apply to JSDoc
         */
        x = 1
        /** @readonly */
        y = 2
        /** @readonly Definitely not here */
        static z = 3
        /** @readonly This is OK too */
        constructor() {
            /** ok */
            this.y = 2
            /** @readonly ok */
            this.ka = 2
                 ~~
!!! error TS2339: Property 'ka' does not exist on type 'LOL'.
        }
    }
    
    var l = new LOL()
    l.y = 12
    